--- a/src/app/todo/todo.html
+++ b/src/app/todo/todo.html
@@ -1,6 +1,6 @@
 <!-- LAB #2 -->
-@if(false) {
-  <mat-progress-bar mode="determinate" [value]="0"></mat-progress-bar>
+@if(!ready()) {
+  <mat-progress-bar mode="determinate" [value]="progress() * 100"></mat-progress-bar>
 }
 
 <mat-selection-list>
@@ -25,7 +25,7 @@
   </mat-form-field>
 
   <!-- LAB #2 -->
-  <button mat-raised-button (click)="runPrompt(prompt.value, langModel.value)" [disabled]="true">
+  <button mat-raised-button (click)="runPrompt(prompt.value, langModel.value)" [disabled]="!ready()">
     <mat-icon>send</mat-icon>
     Ask
   </button>
