--- a/src/app/todo/todo.html
+++ b/src/app/todo/todo.html
@@ -8,7 +8,7 @@
 </mat-selection-list>
 
 <!-- LAB #3 -->
-<pre></pre>
+<pre>{{ reply() }}</pre>
 
 <div class="container">
   <mat-form-field style="width: 150px">
