--- a/src/app/form/form.html
+++ b/src/app/form/form.html
@@ -4,5 +4,6 @@
 <button (click)="paste()">Paste</button>
 <form [formGroup]="formGroup">
   <input placeholder="Name" formControlName="name">
+  <input placeholder="Postcode" formControlName="postcode">
   <input placeholder="City" formControlName="city">
 </form>
